--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ rvm:
 
 sudo: false
 dist: trusty
+deploy:
+  provider: heroku
+  api_key:
+    secure: $HEROKU_API_KEY  
+  app: spaces-coworking
+  run:
+    - "rake db:migrate"
+    - restart
 addons:
   code_climate:
     repo_token: $CC_TOKEN
